# thoth

./: .gitignore  .gitmodules  CairoDisass.py  MANIFEST.in  README.md  __main__.py  __version__.py  a.json  abi_parser.py  cairo_instruction.py  callgraph.py  cfg.py  classData.py  conditions_decompiler.py  disassembler.py  disassembler_for_test.py  disassembler_try.py  disassembler_v2.py  function.py  instruction.py  instructionData.py  jsonParser.py  requirements.txt  setup.py  test.py  test_condition1.cairo  test_file.cairo  utils.py
contract-class-converter/: Cargo.toml  README.md
doc/: symbolic_bounded_model_checker_sierra.md  symbolic_execution.md  symbolic_execution_sierra.md
doctest-output/: CALL FLOW GRAPH.gv  round-table.gv
github-actions/: thoth-sierra-callgraph.yml  thoth-sierra-cfg.yml
images/: callgraph_legend.dot
rust_bindings/sierra_converter/: Cargo.toml
rust_bindings/sierra_converter/src/: main.rs
sierra/: README.md  arguments.py  config.py  objects.py  parser.py  sierra.lark  thoth_sierra.py  utils.py
tests/: Makefile  cairo_to_json.sh  coverage.py  decompiler_test.py  disassembler_try.py  disassembler_v2.py  if_list.cairo  json_to_txt.sh  json_to_txt_tests.sh  regression_test.py  test.py  test_condition1.cairo  test_condition1.json  test_conditions.cairo  test_thoth_sierra.py  tests.sh
thoth/: __init__.py  __main__.py  abi_parser.py  cairo_instruction.py  callgraph.py  cfg.py  decompiler.py  disassembler.py  function.py  instruction.py  thoth.py  utils.py
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  (+1 more)
(+462 files in other folders)
